--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/buh.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/buh.html
@@ -156,93 +156,69 @@
 
 
 
+<div id="myblank" style="padding-left: 15px;">
+	<p>
+		<b>
+			<h3 style="text-indent: 45px;">Перечень дисциплин</h3>
+		</b>
+	</p>
+	<p>
+		<b>
+			<h4 style="text-indent: 45px;">Базовые дисциплины</h4>
+		</b>
+	</p>
+	<p>
+		<span>1. Экономическая теория (микроэкономика).</span>
+	</p>
+	<p>
+		<span>2. Правовое регулирование предпринимательской деятельности.</span>
+	</p>
+	<p>
+		<span>3. Финансы организации.</span>
+	</p>
+	<p>
+		<span>4. Налоги и налогообложение.</span>
+	</p>
+	<p>
+		<b>
+			<h4 style="text-indent: 45px;">Специальные дисциплины</h4>
+		</b>
+	</p>
+	<p>
+		<span>1. Теория бухгалтерского учета.</span>
+	</p>
+	<p>
+		<span>2. Бухгалтерский финансовый учет.</span>
+	</p>
+	<p>
+		<span>3. Бухгалтерский управленческий учет.</span>
+	</p>
+	<p>
+		<span>4. Бухгалтерская финансовая отчетность.</span>
+	</p>
+	<p>
+		<span>5. Практикум по бухгалтерскому учету (1С:Бухгалтерия, 8.2).</span>
+	</p>
+	<p>
+		<span>6. Финансовый анализ.</span>
+	</p>
+	<p>
+		<span>7. Комплексный анализ финансово-хозяйственной деятельности.</span>
+	</p>
+	<p>
+		<span>8. Международные стандарты финансовой отчетности.</span>
+	</p>
+	<p>
+		<span>9. Основы аудита.</span>
+	</p>
+	<p>
+		<span>10. Аудит финансовой отчетности и корпоративный финансовый контроль.</span>
+	</p>
+</div>
+<div>
+	<br/>
+</div>
 
-
-<h3 class="ms-rteElement-H3B">Перечень дисциплин</h3>
-<p class="ms-rteElement-P">
-	<span>
-		<strong>Базовые дисциплины</strong>
-	</span>
-</p>
-<ul>
-	<li>
-		<div class="ms-rteElement-P">
-			<span>Экономическая теория (микроэкономика)</span>
-		</div>
-	</li>
-	<li>
-		<div class="ms-rteElement-P">
-			<span>Правовое регулирование предпринимательской деятельности</span>
-		</div>
-	</li>
-	<li>
-		<div class="ms-rteElement-P">
-			<span>Финансы организации</span>
-		</div>
-	</li>
-	<li>
-		<div class="ms-rteElement-P">
-			<span>Налоги и налогообложение</span>
-		</div>
-	</li>
-</ul>
-<p class="ms-rteElement-P">
-	<span>
-		<strong>Специальные дисциплины</strong>
-	</span>
-</p>
-<ul>
-	<li>
-		<div class="ms-rteElement-P">
-			<span>Теория бухгалтерского учета</span>
-		</div>
-	</li>
-	<li>
-		<div class="ms-rteElement-P">
-			<span>Бухгалтерский финансовый учет</span>
-		</div>
-	</li>
-	<li>
-		<div class="ms-rteElement-P">
-			<span>Бухгалтерский управленческий учет</span>
-		</div>
-	</li>
-	<li>
-		<div class="ms-rteElement-P">
-			<span>Бухгалтерская финансовая отчетность</span>
-		</div>
-	</li>
-	<li>
-		<div class="ms-rteElement-P">
-			<span>Практикум по бухгалтерскому учету (1С:Бухгалтерия, 8.2)</span>
-		</div>
-	</li>
-	<li>
-		<div class="ms-rteElement-P">
-			<span>Финансовый анализ</span>
-		</div>
-	</li>
-	<li>
-		<div class="ms-rteElement-P">
-			<span>Комплексный анализ финансово-хозяйственной деятельности</span>
-		</div>
-	</li>
-	<li>
-		<div class="ms-rteElement-P">
-			<span>Международные стандарты финансовой отчетности</span>
-		</div>
-	</li>
-	<li>
-		<div class="ms-rteElement-P">
-			<span>Основы аудита</span>
-		</div>
-	</li>
-	<li>
-		<div class="ms-rteElement-P">
-			<span>Аудит финансовой отчетности и корпоративный финансовый контроль</span>
-		</div>
-	</li>
-</ul>
 
 
 
@@ -274,13 +250,13 @@
 
 		<li>
 			<span>
-				<a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx"/>
-			</span>
+				<a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">
+			</a></span><a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">
 договоры:
 
-			<ul>
-				<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+			</a><ul><a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">
+				</a><li><a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">
+					</a><a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
 				</li>
 				<li>
 					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
@@ -318,8 +294,8 @@
 		<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
 			<span>Методические указания по написанию и защите выпускной&#160; аттестационной <br/>работы слушателями&#160; дополнительного профессионального образования (профессиональная переподготовка<span style="display: inline-block;">)</span>
 			</span>
-			<span style="display: inline-block;"/>
-		</a>
+			<span style="display: inline-block;">
+		</span></a>
 		<br/>
 	</li>
 </ul>
