--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/ekupr.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/ekupr.html
@@ -158,70 +158,82 @@
 
 
 
-
-
+<div id="myblank" style="padding-left: 15px;">
+	<p>
+		<b>
+			<h3 style="text-indent: 45px;">Перечень дисциплин</h3>
+		</b>
+	</p>
+	<p>
+		<b>
+			<h4 style="text-indent: 45px;">Базовые дисциплины</h4>
+		</b>
+	</p>
+	<p>
+		<span>1. Базовые дисциплины.</span>
+	</p>
+	<p>
+		<span>2. Менеджмент.</span>
+	</p>
+	<p>
+		<span>3. Экономика организаций.</span>
+	</p>
+	<p>
+		<span>4. Трудовое право.</span>
+	</p>
+	<p>
+		<span>5. Бухгалтерский учет.</span>
+	</p>
+	<p>
+		<b>
+			<h4 style="text-indent: 45px;">Специальные дисциплины</h4>
+		</b>
+	</p>
+	<p>
+		<span>1. Специальные дисциплины.</span>
+	</p>
+	<p>
+		<span>2. Экономика и социология труда.</span>
+	</p>
+	<p>
+		<span>3. Рынок труда.</span>
+	</p>
+	<p>
+		<span>4. Управление персоналом.</span>
+	</p>
+	<p>
+		<span>5. Управление человеческими ресурсами.</span>
+	</p>
+	<p>
+		<span>6. Организационное поведение.</span>
+	</p>
+	<p>
+		<span>7. Корпоративная социальная ответственность.</span>
+	</p>
+	<p>
+		<span>8. Кадровое делопроизводство.</span>
+	</p>
+	<p>
+		<span>9. Информационные системы в управлении персоналом.</span>
+	</p>
+	<p>
+		<span>10. Стратегическое планирование  и развитие карьеры.</span>
+	</p>
+	<p>
+		<span>11. Аудит и контроллинг персонала.</span>
+	</p>
+	<p>
+		<span>12. Инновационный менеджмент в управлении персоналом.</span>
+	</p>
+</div>
 <div>
+	<br/>
+</div>
 
 
 
 
 
-
-
-
-
-
-	<h3 class="ms-rteElement-H3B">Перечень дисциплин</h3>
-	<p class="ms-rteElement-P">
-		<strong>Базовые дисциплины</strong>
-	</p>
-	<ul>
-		<li>
-			<span>Базовые дисциплины</span>
-		</li>
-		<li>
-			<span>
-				<span style="display: inline-block;">Менеджмент</span>
-			</span>
-		</li>
-		<li>
-			<span>Экономика организаций</span>
-		</li>
-		<li>
-			<span>Трудовое право</span>
-		</li>
-		<li>
-			<span>Бухгалтерский учет<span style="display: inline-block;">
-					<span style="display: inline-block;">
-					</span>
-				</span>
-			</span>
-		</li>
-	</ul>
-	<p>
-		<strong>Специальные дисциплины</strong>
-		<br/>
-	</p>
-	<ul>
-		<li>Специальные дисциплины</li>
-		<li>Экономика и социология труда</li>
-		<li>Рынок труда</li>
-		<li>Управление персоналом<span style="display: inline-block;">
-			</span>
-		</li>
-		<li>Управление человеческими ресурсами</li>
-		<li>Организационное поведение</li>
-		<li>Корпоративная социальная ответственность</li>
-		<li>Кадровое делопроизводство</li>
-		<li>Информационные системы в управлении персоналом</li>
-		<li>Стратегическое планирование&#160; и развитие карьеры</li>
-		<li>Аудит и контроллинг персонала</li>
-		<li>Инновационный менеджмент в управлении персоналом</li>
-	</ul>
-	<p>
-		<br/>
-	</p>
-	
 	
 	
 	
