--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin-men.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin-men.html
@@ -153,68 +153,71 @@
 
 
 
-
-
-
-
+<div id="myblank" style="padding-left: 15px;">
+	<p>
+		<b>
+			<h3 style="text-indent: 45px;">Перечень дисциплин</h3>
+		</b>
+	</p>
+	<p>
+		<b>
+			<h4 style="text-indent: 45px;">Базовые дисциплины</h4>
+		</b>
+	</p>
+	<p>
+		<span>1. Экономическая теория (микроэкономика).</span>
+	</p>
+	<p>
+		<span>2. Правовое регулирование предпринимательской деятельности.</span>
+	</p>
+	<p>
+		<span>3. Бухгалтерский учет.</span>
+	</p>
+	<p>
+		<span>4. Налоги и налогообложение.</span>
+	</p>
+	<p>
+		<b>
+			<h4 style="text-indent: 45px;">Специальные дисциплины</h4>
+		</b>
+	</p>
+	<p>
+		<span>1. Финансовый менеджмент.</span>
+	</p>
+	<p>
+		<span>2. Деньги, кредит, банки.</span>
+	</p>
+	<p>
+		<span>3. Финансы организаций.</span>
+	</p>
+	<p>
+		<span>4. Управленческие финансы.</span>
+	</p>
+	<p>
+		<span>5. Финансовое планирование и прогнозированние.</span>
+	</p>
+	<p>
+		<span>6. Инвестиционнй анализ.</span>
+	</p>
+	<p>
+		<span>7. АИТ в финансовом менеджменте.</span>
+	</p>
+	<p>
+		<span>8. Оценка и анализ рисков.</span>
+	</p>
+	<p>
+		<span>9. Оценка стоимости и бизнеса.</span>
+	</p>
+</div>
 <div>
+	<br/>
+</div>
 
-	<h3 class="ms-rteElement-H3B">Перечень дисциплин</h3>
-	<p class="ms-rteElement-P">
-		<strong>Базовые дисциплины</strong>
-	</p>
-	<ul>
-		<li>
-			<div class="ms-rteElement-P">Экономическая теория (микроэкономика)</div>
-		</li>
-		<li>
-			<div class="ms-rteElement-P">Правовое регулирование предпринимательской деятельности</div>
-		</li>
-		<li>
-			<div class="ms-rteElement-P">Бухгалтерский учет<br/>
-			</div>
-		</li>
-		<li>
-			<div class="ms-rteElement-P">Налоги и налогообложение</div>
-		</li>
-	</ul>
-	<p class="ms-rteElement-P">
-		<strong>Специальные дисциплины</strong>
-	</p>
-	<ul>
-		<li>
-			<div class="ms-rteElement-P">Финансовый менеджмент<br/>
-			</div>
-		</li>
-		<li>
-			<div class="ms-rteElement-P">Деньги, кредит, банки<br/>
-			</div>
-		</li>
-		<li>
-			<div class="ms-rteElement-P">Финансы организаций<br/>
-			</div>
-		</li>
-		<li>
-			<div class="ms-rteElement-P">Управленческие финансы</div>
-		</li>
-		<li>
-			<div class="ms-rteElement-P">Финансовое <span>планирование</span> и <span>прогнозированние <span style="display: inline-block;">
-					</span>
-				</span>
-			</div>
-		</li>
 
-		<li>
-			<div class="ms-rteElement-P">Инвестиционнй анализ<br/>
-			</div>
-		</li>
-		<li>
-			<div class="ms-rteElement-P">АИТ в финансовом менеджменте</div>
-		</li>
-		<li>Оценка и анализ рисков</li>
-		<li>Оценка стоимости и бизнеса<br/>
-		</li>
-	</ul>
+
+
+
+
 	
 	
 	
