--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin_cred.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin_cred.html
@@ -47,7 +47,7 @@
 <div id="myblank">
 	<table class="MsoNormalTable ms-rteTable-1" cellspacing="0" cellpadding="15" border="0">
 		<tbody style="font-size: 14pt;">
-				
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
@@ -72,7 +72,7 @@
 					4-6 месяцев
 				</td>
 			</tr>
-			
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
@@ -93,7 +93,7 @@
 					6 – 8 часов
 				</td>
 			</tr>
-			
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
@@ -114,7 +114,7 @@
 					27300 руб.
 				</td>
 			</tr>
-			
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" valign="middle" style="padding: 15pt;">
 					<b>
@@ -139,269 +139,75 @@
 
 
 
-
-
-
-
-
-
-
-<p class="MsoNormal" style="text-align: justify;">
-	<b>
-		<span style="font-size: 14pt; line-height: 115%;">Перечень дисциплин </span>
-	</b>
-</p>
-<div>
-
+<div id="myblank" style="padding-left: 15px;">
+	<p>
+		<b>
+			<h3 style="text-indent: 45px;">Перечень дисциплин</h3>
+		</b>
+	</p>
+	<p>
+		<b>
+			<h4 style="text-indent: 45px;">Базовая часть</h4>
+		</b>
+	</p>
+	<p>
+		<span>1. Экономическая теория.</span>
+	</p>
+	<p>
+		<span>2. Правовое регулирование финансово-банковской деятельности.</span>
+	</p>
+	<p>
+		<span>3. Налоги и налогообложение.</span>
+	</p>
+	<p>
+		<span>4. Бухгалтерский учет.</span>
+	</p>
+	<p>
+		<span>5. Анализ деятельности экономических субъектов.</span>
+	</p>
+	<p>
+		<span>6. Деньги. Кредит. Банки.</span>
+	</p>
+	<p>
+		<b>
+			<h4 style="text-indent: 45px;">Профильная часть</h4>
+		</b>
+	</p>
+	<p>
+		<span>1. Финансы.</span>
+	</p>
+	<p>
+		<span>2. Финансовая политика хозяйствующих субъектов.</span>
+	</p>
+	<p>
+		<span>3. Банковское дело.</span>
+	</p>
+	<p>
+		<span>4. Финансовый менеджмент.</span>
+	</p>
+	<p>
+		<span>5. Финансовые рынки.</span>
+	</p>
+	<p>
+		<span>6. Инвестиционный анализ.</span>
+	</p>
+	<p>
+		<span>7. Оценка и анализ финансовых рисков.</span>
+	</p>
+	<p>
+		<span>8. Страховое дело.</span>
+	</p>
+	<p>
+		<span>9. Функционально-ориентированные информационные технологии в подготовке финансово-банковских специалистов.</span>
+	</p>
 </div>
-<p class="MsoNormal" style="text-align: justify;">
-	<b>
-		<span style="font-size: 13pt; line-height: 115%;">Базовая часть</span>
-	</b>
-</p>
 <div>
-
+	<br/>
 </div>
-<p class="MsoListParagraphCxSpFirst" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">1.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-	</b>
-	<span style="font-size: 12pt; line-height: 115%;">Экономическая теория</span>
-	<span style="font-size: 13pt; line-height: 115%;">.</span>
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">
-		</span>
-	</b>
-</p>
-<div>
 
-</div>
-<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">2.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-	</b>
-	<span style="font-size: 12pt; line-height: 115%;">Правовое регулирование финансово-банковской деятельности</span>
-	<span style="font-size: 13pt; line-height: 115%;">.</span>
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">
-		</span>
-	</b>
-</p>
-<div>
 
-</div>
-<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">3.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-	</b>
-	<span style="font-size: 12pt; line-height: 115%;">Налоги и налогообложение</span>
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">
-		</span>
-	</b>
-</p>
-<div>
 
-</div>
-<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">4.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-	</b>
-	<span style="font-size: 12pt; line-height: 115%;">Бухгалтерский учет</span>
-	<span style="font-size: 13pt; line-height: 115%;">.</span>
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">
-		</span>
-	</b>
-</p>
-<div>
 
-</div>
-<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">5.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-	</b>
-	<span style="font-size: 12pt; line-height: 115%;">Анализ деятельности экономических субъектов</span>
-	<span style="font-size: 13pt; line-height: 115%;">.</span>
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">
-		</span>
-	</b>
-</p>
-<div>
-
-</div>
-<p class="MsoListParagraphCxSpLast" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">6.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-	</b>
-	<span style="font-size: 12pt; line-height: 115%;">Деньги. Кредит. Банки</span>
-	<span style="font-size: 13pt; line-height: 115%;">.</span>
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">
-		</span>
-	</b>
-</p>
-<div>
-
-</div>
-<p class="MsoNormal" style="text-align: justify;">
-	<b>
-		<span style="font-size: 13pt; line-height: 115%;">Профильная часть</span>
-	</b>
-</p>
-<div>
-
-</div>
-<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-indent: -18pt;">
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;1.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-	</b>
-	<span style="font-size: 12pt; line-height: 115%;">Финансы</span>
-	<span style="font-size: 13pt; line-height: 115%;">.</span>
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">
-		</span>
-	</b>
-</p>
-<div>
-
-</div>
-<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;2.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-	</b>
-	<span style="font-size: 12pt; line-height: 115%;">Финансовая политика хозяйствующих субъектов</span>
-	<span style="font-size: 13pt; line-height: 115%;">.</span>
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">
-		</span>
-	</b>
-</p>
-<div>
-
-</div>
-<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;3.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-	</b>
-	<span style="font-size: 12pt; line-height: 115%;">Банковское дело</span>
-	<span style="font-size: 13pt; line-height: 115%;">.</span>
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">
-		</span>
-	</b>
-</p>
-<div>
-
-</div>
-<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;4.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-	</b>
-	<span style="font-size: 12pt; line-height: 115%;">Финансовый менеджмент</span>
-	<span style="font-size: 13pt; line-height: 115%;">.</span>
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">
-		</span>
-	</b>
-</p>
-<div>
-
-</div>
-<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;5.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-	</b>
-	<span style="font-size: 12pt; line-height: 115%;">Финансовые рынки</span>
-	<span style="font-size: 13pt; line-height: 115%;">.</span>
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">
-		</span>
-	</b>
-</p>
-<div>
-
-</div>
-<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;6.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-	</b>
-	<span style="font-size: 12pt; line-height: 115%;">Инвестиционный анализ.</span>
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">
-		</span>
-	</b>
-</p>
-<div>
-
-</div>
-<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;7.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-	</b>
-	<span style="font-size: 12pt; line-height: 115%;">Оценка и анализ финансовых рисков.</span>
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">
-		</span>
-	</b>
-</p>
-<div>
-
-</div>
-<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;8.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-	</b>
-	<span style="font-size: 12pt; line-height: 115%;">Страховое дело.</span>
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">
-		</span>
-	</b>
-</p>
-<div>
-
-</div>
-<p class="MsoListParagraphCxSpLast" style="text-align: left; text-indent: -18pt;">
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160;​9.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-	</b>
-	<span style="font-size: 12pt; line-height: 115%;">Функционально-ориентированные информационные технологии в подготовке финансово-банковских
-специалистов.​</span>
-	<b>
-		<span style="font-size: 12pt; line-height: 115%;">
-		</span>
-	</b>​</p>
 
 
 
