--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gos_mu_upr.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gos_mu_upr.html
@@ -154,71 +154,59 @@
 
 
 
-
-
-
-
-<div>
-
-
-
-
-
-
-
-	<h3 class="ms-rteElement-H3B">Перечень дисциплин</h3>
-	<p class="ms-rteElement-P">
-		<strong>
-		</strong>
+<div id="myblank" style="padding-left: 15px;">
+	<p>
+		<b>
+			<h3 style="text-indent: 45px;">Перечень дисциплин</h3>
+		</b>
 	</p>
-	<strong>
+	<p>
+		<span>1. Экономика государственного и муниципального сектора.</span>
+	</p>
+	<p>
+		<span>2. Правовые основы государственного и муниципального управления.</span>
+	</p>
+	<p>
+		<span>3. Теория управления.</span>
+	</p>
+	<p>
+		<span>4. Система государственного управления.</span>
+	</p>
+	<p>
+		<span>5. Муниципальное управление.</span>
+	</p>
+	<p>
+		<span>6. Государственные и муниципальные финансы.</span>
+	</p>
+	<p>
+		<span>7. Стратегическое управление.</span>
+	</p>
+	<p>
+		<span>8. Управление персоналом.</span>
+	</p>
+	<p>
+		<span>9. Управление общественными отношениями.</span>
+	</p>
+	<p>
+		<span>10. Управление государственной и муниципальной собственностью.</span>
+	</p>
+	<p>
+		<span>11. Управленческие решения.</span>
+	</p>
+	<p>
+		<span>12. Программно-целевое планирование.</span>
+	</p>
+	<p>
+		<span>13. Антикризисное управление.</span>
+	</p>
+</div>
+<div>
+	<br/>
+</div>
 
-		<ol>
-			<li>
-				<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Экономика государственного и муниципального сектора</span>
-			</li>
-			<li>
-				<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Правовые основы государственного и муниципального управления</span>
-			</li>
-			<li>
-				<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Теория управления</span>
-			</li>
-			<li>
-				<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Система государственного управления</span>
-			</li>
-			<li>
-				<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Муниципальное управление<span style="display: inline-block;">
-					</span>
-				</span>
-			</li>
-			<li>
-				<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Государств<span style="display: inline-block;">енные и муниципальные финансы</span>
-				</span>
-			</li>
-			<li>
-				<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Стратегическое управление</span>
-			</li>
-			<li>
-				<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Управление персоналом</span>
-			</li>
-			<li>
-				<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Управление общественными отношениями</span>
-			</li>
-			<li>
-				<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Управление государственной и муниципальной собственностью</span>
-			</li>
-			<li>
-				<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Управленческие решения</span>
-			</li>
-			<li>
-				<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Программно-целевое планирование</span>
-			</li>
-			<li>
-				<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Антикризисное управление</span>
-			</li>
-		</ol>
 
-		
+
+
 		
 		
 		
