--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/per_vsfer_prof.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/per_vsfer_prof.html
@@ -47,7 +47,7 @@
 <div id="myblank">
 	<table class="MsoNormalTable ms-rteTable-1" cellspacing="0" cellpadding="15" border="0">
 		<tbody style="font-size: 14pt;">
-				
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
@@ -68,7 +68,7 @@
 					2,5 года
 				</td>
 			</tr>
-			
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
@@ -89,7 +89,7 @@
 					6 – 8 часов
 				</td>
 			</tr>
-			
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
@@ -110,7 +110,7 @@
 					40 000,00 руб. в год
 				</td>
 			</tr>
-			
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" valign="middle" style="padding: 15pt;">
 					<b>
@@ -134,161 +134,62 @@
 
 
 
-
-
-
-	<p class="MsoNormal" style="text-align: justify;">
+<div id="myblank" style="padding-left: 15px;">
+	<p>
 		<b>
-			<span style="font-size: 14pt; line-height: 115%;">Перечень дисциплин </span>
+			<h3 style="text-indent: 45px;">Перечень дисциплин</h3>
 		</b>
 	</p>
-
-	<p class="MsoNormal" style="text-align: justify;">
+	<p>
 		<b>
-			<span style="font-size: 13pt; line-height: 115%;">Базовая часть</span>
+			<h4 style="text-indent: 45px;">Базовая часть</h4>
 		</b>
 	</p>
-
-	<p class="MsoListParagraphCxSpFirst" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">1.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-				</span>
-			</span>
-		</b>
-		<span style="font-size: 13pt; line-height: 115%;">Введение в языкознание.</span>
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">
-		</span></b>
+	<p>
+		<span>1. Введение в языкознание.</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">2.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-				</span>
-			</span>
-		</b>
-		<span style="font-size: 13pt; line-height: 115%;">Теоретическая грамматика.</span>
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">
-		</span></b>
+	<p>
+		<span>2. Теоретическая грамматика.</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">3.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-				</span>
-			</span>
-		</b>
-		<span style="font-size: 13pt; line-height: 115%;">Лексикология</span>
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">
-		</span></b>
+	<p>
+		<span>3. Лексикология .</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">4.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-				</span>
-			</span>
-		</b>
-		<span style="font-size: 13pt; line-height: 115%;">Стилистика, изучаемого языка (английского).</span>
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">
-		</span></b>
+	<p>
+		<span>4. Стилистика, изучаемого языка (английского).</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">5.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-				</span>
-			</span>
-		</b>
-		<span style="font-size: 13pt; line-height: 115%;">Практический курс иностранного языка (английского).</span>
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">
-		</span></b>
+	<p>
+		<span>5. Практический курс иностранного языка (английского).</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpLast" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">6.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-				</span>
-			</span>
-		</b>
-		<span style="font-size: 13pt; line-height: 115%;">Стилистика русского языка и культура речи.</span>
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">
-		</span></b>
+	<p>
+		<span>6. Стилистика русского языка и культура речи.</span>
 	</p>
-
-	<p class="MsoNormal" style="text-align: justify;">
+	<p>
 		<b>
-			<span style="font-size: 13pt; line-height: 115%;">Профильная часть</span>
+			<h4 style="text-indent: 45px;">Профильная часть</h4>
 		</b>
 	</p>
-
-	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-indent: -18pt;">
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;1.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-				</span>
-			</span>
-		</b>
-		<span style="font-size: 13pt; line-height: 115%;">Теория перевода.</span>
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">
-		</span></b>
+	<p>
+		<span>1. Теория перевода.</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;2.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-				</span>
-			</span>
-		</b>
-		<span style="font-size: 13pt; line-height: 115%;">Практический курс профессионально ориентированного
-перевода.</span>
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">
-		</span></b>
+	<p>
+		<span>2. Практический курс профессионально ориентированного перевода.</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;3.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-				</span>
-			</span>
-		</b>
-		<span style="font-size: 13pt; line-height: 115%;">Деловой иностранный язык (английский).</span>
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">
-		</span></b>
+	<p>
+		<span>3. Деловой иностранный язык (английский).</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;4.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-				</span>
-			</span>
-		</b>
-		<span style="font-size: 13pt; line-height: 115%;">Практикум по переводу.</span>
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">
-		</span></b>
+	<p>
+		<span>4. Практикум по переводу.</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpLast" style="text-align: justify; text-indent: -18pt;">
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;5.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
-				</span>
-			</span>
-		</b>
-		<span style="font-size: 13pt; line-height: 115%;">Лингвострановедение.</span>
-		<b>
-			<span style="font-size: 12pt; line-height: 115%;">
-		</span></b>
+	<p>
+		<span>5. Лингвострановедение.</span>
 	</p>
-​
-​
+</div>
+<div>
+	<br/>
+</div>
+
+
+
 
 
 
@@ -306,7 +207,7 @@
 		<li>
 			заявление;</li>
 		<li>
-		<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_qualification_Fiz_lico.docx">договор​</a>
+			<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_qualification_Fiz_lico.docx">договор​</a>
 		</li>
 		<li>другие документы (копия паспорта, копия документа об образовании, фотографии и др.)</li>
 	</ul>
