--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/prav_reg.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/prav_reg.html
@@ -47,7 +47,7 @@
 <div id="myblank">
 	<table class="MsoNormalTable ms-rteTable-1" cellspacing="0" cellpadding="15" border="0">
 		<tbody style="font-size: 14pt;">
-				
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
@@ -75,7 +75,7 @@
 					7-8 месяцев
 				</td>
 			</tr>
-			
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
@@ -103,7 +103,7 @@
 					</ul>
 				</td>
 			</tr>
-			
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
@@ -124,7 +124,7 @@
 					<p class="ms-rteElement-P">​35 000 руб. (<a href="/fil/smolensk/dpo/retraining/Documents/bank_smolensk.pdf" target="_blank">скачать реквизиты оплаты</a>)</p>
 				</td>
 			</tr>
-			
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" valign="middle" style="padding: 15pt;">
 					<b>
@@ -149,220 +149,84 @@
 
 
 
-	
-	
-	
-	
-	
-	
-	
-	<p class="MsoNormal" align="left" style="margin-bottom: 6pt; text-align: left; text-indent: 0cm; line-height: normal; background: white none repeat scroll 0% 0%;">
+
+
+
+<div id="myblank" style="padding-left: 15px;">
+	<p>
 		<b>
-			<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;"><br/></span></b></p>
-<p class="MsoNormal" align="left" style="margin-bottom: 6pt; text-align: left; text-indent: 0cm; line-height: normal; background: white none repeat scroll 0% 0%;"><b><span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Перечень модулей, дисциплин</span>
+			<h3 style="text-indent: 45px;">Перечень модулей, дисциплин</h3>
 		</b>
 	</p>
-
-	<p class="MsoNormal" align="left" style="margin: 6pt 0cm; text-align: left; text-indent: 0cm; line-height: normal; background: white none repeat scroll 0% 0%;">
+	<p>
 		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Модуль 1. Базовые
-дисциплины</span>
+			<h4 style="text-indent: 45px;">Модуль 1. Базовые дисциплины</h4>
 		</b>
 	</p>
-
-	<p class="MsoListParagraphCxSpFirst" align="left" style="margin-left: 35.7pt; text-align: left; text-indent: -17.85pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>1.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Теория государства<span>&#160; </span>и права.</span>
+	<p>
+		<span>1. Теория государства и права.</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>2.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Конституционное<span>&#160; </span>право</span>
-		<span lang="EN-US" style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;"> России</span>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">.</span>
+	<p>
+		<span>2. Конституционное право России.</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>3.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Юридическая
-служба </span>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">предприятий, организаций и учреждений.</span>
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-		</span></b>
+	<p>
+		<span>3. Юридическая служба предприятий, организаций и учреждений.</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>4.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Информационные технологии в
-юридической деятельности.</span>
+	<p>
+		<span>4. Информационные технологии в юридической деятельности.</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpLast" align="left" style="margin: 6pt 0cm 6pt 35.7pt; text-align: left; text-indent: -17.85pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>5.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Профессиональная этика.</span>
+	<p>
+		<span>5. Профессиональная этика.</span>
 	</p>
-
-	<p class="MsoNormal" align="left" style="text-align: left; text-indent: 0cm; line-height: normal; background: white none repeat scroll 0% 0%;">
+	<p>
 		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Модуль 2.
-Специальные дисциплины</span>
+			<h4 style="text-indent: 45px;">Модуль 2. Специальные дисциплины</h4>
 		</b>
 	</p>
-
-	<p class="MsoListParagraphCxSpFirst" align="left" style="margin: 3pt 0cm 0.0001pt 35.7pt; text-align: left; text-indent: -17.85pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>1. Муниципальное право России</span>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">.</span>
-	</span></b></p>
-<b>
-
-	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>2. Трудовое право</span>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">.</span>
-	</span></b></p>
-<b>
-
-	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>3. Гражданское право.</span>
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-		</span></b>
-	</span></b></p>
-<b>
-
-	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>4. Гражданский процесс.</span>
-	</span></b></p>
-<b>
-
-	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>5. Уголовное право.</span>
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-		</span></b>
-	</span></b></p>
-<b>
-
-	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>6. Уголовный процесс.</span>
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-		</span></b>
-	</span></b></p>
-<b>
-
-	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>7. Арбитражный процесс.</span>
-	</span></b></p>
-<b>
-
-	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>8.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span lang="EN-US" style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Административное
-право</span>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">.</span>
+	<p>
+		<span>1. Муниципальное право России.</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>9.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Финансовое
-право.</span>
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-		</span></b>
+	<p>
+		<span>2. Трудовое право.</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>10.<span style="font: 7pt &quot;times new roman&quot;;">&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Особенности
-правового регулирования экономической деятельности организации.</span>
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-		</span></b>
+	<p>
+		<span>3. Гражданское право.</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>11.<span style="font: 7pt &quot;times new roman&quot;;">&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Предпринимательское<span>&#160; </span>право.</span>
+	<p>
+		<span>4. Гражданский процесс.</span>
 	</p>
-
-	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>12.<span style="font: 7pt &quot;times new roman&quot;;">&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Нотариат. Совершение нотариальных
-действий</span>
+	<p>
+		<span>5. Уголовное право.</span>
 	</p>
-
-	<span style="display: inline-block;">
-
-
-
-
-
+	<p>
+		<span>6. Уголовный процесс.</span>
+	</p>
+	<p>
+		<span>7. Арбитражный процесс.</span>
+	</p>
+	<p>
+		<span>8. Административное право.</span>
+	</p>
+	<p>
+		<span>9. Финансовое право.</span>
+	</p>
+	<p>
+		<span>10. Особенности правового регулирования экономической деятельности организации.</span>
+	</p>
+	<p>
+		<span>11. Предпринимательское право.</span>
+	</p>
+	<p>
+		<span>12. Нотариат. Совершение нотариальных действий</span>
+	</p>
+</div>
+<div>
 	<br/>
+</div>
+
+
+<span style="display: inline-block;">
+
 	<h3 class="ms-rteElement-H3B">
 		<a href="/fil/smolensk/dpo/Pages/contacts.aspx" target="_blank">Контакты​</a>
 	</h3>
@@ -388,15 +252,15 @@
 				</font>;</li>
 			<li>договоры:<ul>
 					<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
-				</li>
-				<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
-				</li>
+						<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+					</li>
+					<li>
+						<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
+					</li>
 				</ul>
 			</li>
 			<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
 		</ul>
 	</div>
-	
-</div></b></b></b></b></b></b></b>
+
+</div>
