--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/spec_zakup.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/spec_zakup.html
@@ -140,109 +140,99 @@
 
 
 
-	<div>
-		
-		<h3 class="ms-rteElement-H3B">Перечень модулей</h3>
-		<p class="ms-rteElement-P">
-			<strong>
-		</strong></p>
-		
-		
-		
-		
-<strong>
 
-		<p class="MsoNormal" style="text-align: justify;">
-			<b>
-				<i>
-					<span style="font-size: 12pt; line-height: 115%;">Модуль 1.</span>
+<div id="myblank" style="padding-left: 15px;">
+	<p>
+		<b>
+			<h3 style="text-indent: 45px;">Перечень модулей</h3>
+		</b>
+	</p>
+	<div style="text-align: left;">
+	<p>
+		<b>
+			<i>
+					<span>Модуль 1.</span>
 				</i>
 			</b>
 			<b>
-				<span style="font-size: 12pt; line-height: 115%;"> Общие положения контрактной системы</span>
+				<span > Общие положения контрактной системы</span>
 			</b>
-		</p>
-
-		<p class="MsoNormal" style="margin-left: 63.8pt; text-align: justify; text-indent: -63.8pt;">
-			<b>
+	</p>
+	<p >
+		<b>
 				<i>
-					<span style="font-size: 12pt; line-height: 115%;">Модуль 2.</span>
+					<span >Модуль 2.</span>
 				</i>
 			</b>
 			<b>
-				<span style="font-size: 12pt; line-height: 115%;">
-					<span> </span>Законодательство Российской Федерации о
-контрактной системе в сфере закупок</span>
+				<span >
+					Законодательство Российской Федерации о контрактной системе в &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;сфере закупок</span>
 			</b>
-		</p>
-
-		<p class="MsoNormal" style="text-align: justify;">
-			<b>
+	</p>
+	<p>
+		<b>
 				<i>
-					<span style="font-size: 12pt; line-height: 115%;">Модуль 3.</span>
+					<span >Модуль 3.</span>
 				</i>
 			</b>
 			<b>
-				<span style="font-size: 12pt; line-height: 115%;">
-					<span> </span>Планирование и обоснование закупок</span>
+				<span >
+					Планирование и обоснование закупок</span>
 			</b>
-		</p>
-
-		<p class="MsoNormal" style="text-align: justify;">
-			<b>
+	</p>
+	<p>
+		<b>
 				<i>
-					<span style="font-size: 12pt; line-height: 115%;">Модуль 4.</span>
+					<span >Модуль 4.</span>
 				</i>
 			</b>
 			<b>
-				<span style="font-size: 12pt; line-height: 115%;">
-					<span> </span>Осуществление закупок</span>
+				<span >
+					Осуществление закупок</span>
 			</b>
-		</p>
-
-		<p class="MsoNormal" style="text-align: justify;">
-			<b>
+	</p>
+	<p>
+		<b>
 				<i>
-					<span style="font-size: 12pt; line-height: 115%;">Модуль 5</span>
+					<span >Модуль 5.</span>
 				</i>
 			</b>
 			<b>
-				<span style="font-size: 12pt; line-height: 115%;">.<span> </span>Контракты</span>
+				<span >Контракты</span>
 			</b>
-		</p>
-
-		<p class="MsoNormal" style="margin-left: 63.8pt; text-align: justify; text-indent: -63.8pt;">
-			<b>
+	</p>
+	<p>
+		<b>
 				<i>
-					<span style="font-size: 12pt; line-height: 115%;">Модуль&#160;6.<span> </span>
+					<span >Модуль 6.<span> </span>
 					</span>
 				</i>
 			</b>
 			<b>
-				<span style="font-size: 12pt; line-height: 115%;">Мониторинг, контроль, аудит и защита
-прав и интересов участников закупок</span>
+				<span >Мониторинг, контроль, аудит и защита прав и интересов участников &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;закупок</span>
 			</b>
-		</p>
-
-		<p class="MsoNormal" style="text-align: justify;">
-			<b>
+	</p>
+	<p>
+		<b>
 				<i>
-					<span style="font-size: 12pt; line-height: 115%;">Модуль 7.</span>
+					<span >Модуль 7.</span>
 				</i>
 			</b>
 			<b>
-				<span style="font-size: 12pt; line-height: 115%;"> Вариативная часть</span>
+				<span >Вариативная часть</span>
 			</b>
-			<b>
-				<span style="font-size: 14pt; line-height: 115%;">
-			</span></b>
-		</p>
+	</p>
+	</div>
+</div>
+<div>
+	<br/>
+</div>
 
-		<p class="MsoNormal" style="text-align: justify;">
-			<b>
-				<span style="font-size: 14pt; line-height: 115%;">&#160;</span>
-			</b>
-		</p>
+
+
+
+
+
 
 
 		
