--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gb.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gb.html
@@ -149,106 +149,40 @@
 
 
 
-
-
-
-
-<div>
-	<b>
-		<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;"><br/></span></b></div>
-<div><b><span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;"><br/></span></b></div>
-<div><b><span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Перечень модулей, дисциплин</span>
-	</b>
-
+<div id="myblank" style="padding-left: 15px;">
+	<p>
+		<b>
+			<h3 style="text-indent: 45px;">Перечень модулей, дисциплин</h3>
+		</b>
+	</p>
+	<p>
+		<span>1. Правовое регулирование предпринимательской деятельности.</span>
+	</p>
+	<p>
+		<span>2. Организация бухгалтерского учета и документооборот.</span>
+	</p>
+	<p>
+		<span>3. Бухгалтерский учет и бухгалтерская (финансовая) отчетность.</span>
+	</p>
+	<p>
+		<span>4. Международные стандарты финансовой отчетности.</span>
+	</p>
+	<p>
+		<span>5. Основы внутреннего контроля и аудита.</span>
+	</p>
+	<p>
+		<span>6. Налоговая система Российской Федерации.</span>
+	</p>
+	<p>
+		<span>7. Методы финансового анализа и основы финансовых вычислений.</span>
+	</p>
 </div>
-<p class="MsoListParagraphCxSpFirst" align="left" style="margin-bottom: 6pt; text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-	<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-		<span>1.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-		</span>
-	</span>
-	<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Правовое<span>&#160;&#160; </span>регулирование предпринимательской
-деятельности</span>
-</p>
 <div>
-
+	<br/>
 </div>
-<p class="MsoListParagraphCxSpMiddle" align="left" style="margin-bottom: 6pt; text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-	<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-		<span>2.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-		</span>
-	</span>
-	<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Организация
-бухгалтерского учета и документооборот</span>
-</p>
-<div>
-
-</div>
-<p class="MsoListParagraphCxSpMiddle" align="left" style="margin-bottom: 6pt; text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-	<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-		<span>3.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-		</span>
-	</span>
-	<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Бухгалтерский<span>&#160; </span>учет и бухгалтерская (финансовая) отчетность</span>
-</p>
-<div>
-
-</div>
-<p class="MsoListParagraphCxSpMiddle" align="left" style="margin-bottom: 6pt; text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-	<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-		<span>4.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-		</span>
-	</span>
-	<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Международные
-стандарты финансовой отчетности</span>
-</p>
-<div>
-
-</div>
-<p class="MsoListParagraphCxSpMiddle" align="left" style="margin-bottom: 6pt; text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-	<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-		<span>5.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-		</span>
-	</span>
-	<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Основы
-внутреннего контроля и аудита</span>
-</p>
-<div>
-
-</div>
-<p class="MsoListParagraphCxSpMiddle" align="left" style="margin-bottom: 6pt; text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-	<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-		<span>6.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-		</span>
-	</span>
-	<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Налоговая
-система Российской Федерации</span>
-</p>
-<div>
-
-</div>
-<p class="MsoListParagraphCxSpMiddle" align="left" style="margin-bottom: 6pt; text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
-	<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-		<span>7.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-		</span>
-	</span>
-	<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Методы
-финансового анализа и основы финансовых вычислений</span>
-</p>
-<div>
-
-</div>
-<p class="MsoListParagraphCxSpLast" align="left" style="text-align: left; text-indent: 0cm; line-height: normal; background: white none repeat scroll 0% 0%;">
-	<b>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">&#160;</span>
-	</b>
-</p>
-<div>
 
 
 
-
-
-</div>
 
 
 
